<resources>
    <string name="app_name">GymDiary</string>

    <string name="tv_login">Login</string>
    <string name="tv_password">Hasło</string>
    <string name="tv_password_forgot">Zapomniałeś hasła ?</string>
    <string name="tv_create_account">Dołącz do nas !</string>
    <string name="tv_or">Lub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_edit_profile">Ustawienia profilu</string>
    <string name="btn_login">Zaloguj</string>
    <string name="btn_createacc">Stwórz konto !</string>

    <string name="hint_password">Hasło</string>
    <string name="hint_mail">e-mail</string>
    <string name="hint_password_repeat">Powtórz hasło</string>

    <string name="sb_create_acc_success_">Konto zostało założone!</string>

    <string name="dialog_create_account_title">Tworzenie konta</string>

    <string name="please_wait">Sprawdzanie danych, proszę czekać...</string>
    <string name="abort">Anuluj</string>
    <string name="join_us">Dołącz do nas!</string>
    <string name="empty_password">Uzupełnij pole hasło</string>
    <string name="empty_email">Uzupełnij pole email</string>
    <string name="what_is_your_name">Jak się nazywasz ?</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="next">Dalej</string>
    <string name="back">Cofnij</string>
    <string name="press_to_pick_date">Naciśnij aby wybrać datę...</string>
    <string name="when_was_you_born">Kiedy się urodziłeś ?</string>
    <string name="where_you_live">Gdzie mieszkasz ?</string>
    <string name="city">Miasto</string>
    <string name="country">Kraj</string>
    <string name="sex">Podaj swoją płeć</string>
    <string name="man">Mężczyzna</string>
    <string name="woman">Kobieta</string>
    <string name="other">Inna</string>
    <string name="choose_photo">Dodaj zdjęcie profilowe oraz nick!</string>
    <string name="skip">Pomiń</string>
    <string name="photo_you_can_skip">Dzięki nickowi, Twoi znajomi z łatwością Cię odnajdą !</string>
    <string name="put_your_name_and_surname">Podaj imię i nazwisko</string>
    <string name="put_your_name">Podaj imię</string>
    <string name="put_your_surname">Podaj nazwisko</string>
    <string name="nick">Nick</string>
    <string name="generate">Generuj</string>
    <string name="title_activity_training_list">TrainingListActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="name_of_exercise">Nazwa ćwiczenia</string>
    <string name="count_of_sets">Liczba serii</string>
    <string name="Reps_set">Powt./seria</string>
    <string name="Weight_set">Cieżar/powt.</string>
    <string name="create_exercise">Tworzenie ćwiczenia</string>
    <string name="required">Wymagane</string>
    <string name="set_1">Seria 1</string>
    <string name="set_2">Seria 2</string>
    <string name="set_3">Seria 3</string>
    <string name="set_4">Seria 4</string>
    <string name="set_5">Seria 5</string>
    <string name="set_count">Liczba serii</string>
    <string name="reps_count">Powtórzenia</string>
    <string name="weight_on_set">Ciężar</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="have_account">Posiadam konto !</string>
    <string name="different_password">Hasła różnią się !</string>
    <string name="create_account">Stwórz konto !</string>
    <string name="exception_password">Hasło musi mieć przynajmniej 6 znaków</string>
    <string name="exception_email">Adres email jest nieprawidłowy</string>
    <string name="exception_user_exists">Konto z podanym adresem email istnieje !</string>
    <string name="exception_login_credentials">Niepoprawny email lub hasło</string>
    <string name="permisson_denied">Dostęp zabroniony, sprawdź uprawnienia</string>
    <string name="permisson_granted">Dostęp przyznany</string>
    <string name="nick_error">Ten nick jest używany</string>
    <string name="configureYourProfile">Konfiguracja profilu</string>
    <string name="birthdate">Data urodzin</string>
    <string name="choose_your_gender">Wybierz swoją płeć</string>
    <string name="put_your_nick_and_photo">Dodaj zdjęcie i nick</string>
    <string name="complete">Zakończ</string>
    <string name="first_login">Pierwsze logowanie</string>
    <string name="your_profile">Twój profil</string>
    <string name="put_your_city">Podaj swoje miasto</string>
    <string name="put_your_country">Podaj swój kraj</string>
    <string name="too_short_name">Imie za krótkie</string>
    <string name="too_short_surname">Za krótkie nazwisko</string>
    <string name="put_your_birthday">Podaj datę urodzin</string>
    <string name="too_young">Jesteś za młody/a - trzeba mieć przynajmniej 13 lat, aby korzystać z aplikacji</string>
    <string name="put_your_nick">Podaj nick, dzięki niemu znajdą Cię znajomi</string>
    <string name="nick_used">Nick jest już używany</string>
    <string name="ok">OK</string>
    <string name="select_gender">Musisz wybrać płeć</string>
    <string name="chooseTrainingPlan">Wybierz plan treningowy</string>
    <string name="title_activity_create_training">CreateTrainingActivity</string>
    <string name="create_trainingPlan">Tworzenie planu</string>
    <string name="training_plan_title">Nazwa planu</string>
    <string name="aditional_informations">Informacje dodatkowe</string>
    <string name="description">Opis</string>
    <string name="add_exercises">Add exercises</string>
    <string name="choose_exercises">Wybierz ćwiczenia</string>
    <string name="photo_placeholder">photo_placeholder</string>
    <string name="save">Zapisz</string>
    <string name="plan_should_have_title">Plan musi mieć nazwę</string>
    <string name="general">Plan</string>
    <string name="plan">Plan</string>
    <string name="exercises">Ćwiczenia</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="empty_list">Tutaj nic nie ma</string>
    <string name="title_activity_test">test</string>
    <string name="your_exercises">Twoje ćwiczenia</string>
    <string name="error">błąd</string>
    <string name="add_new">Stwórz nowe ćwiczenie</string>
    <string name="choose_from_atlas">Wybierz z dostępnych ćwiczeń</string>
    <string name="exercise_name">Nazwa ćwiczenia</string>
    <string name="exercise_description">Opis ćwiczenia</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="deleting_training_plan">Usuwanie planu treningowego</string>
    <string name="confirm_deleting_training_plan">Czy napewno chcesz usunąć plan treningowy ? Tego procesu nie będzie można cofnąć !</string>
    <string name="delete_plan">Usuń plan</string>
    <string name="cancel">Anuluj</string>
    <string name="edit_exercise">Edycja ćwiczenia</string>
    <string name="title_activity_edit_profile">Edycja profilu</string>
    <string name="list_of_exercises_cannot_be_empty">Musisz dodać przynajmniej jedno ćwiczenie</string>
    <string name="startLiveTraining">Zacznij trening na żywo</string>
    <string name="serie">Seria</string>
    <string name="repeat">Seria</string>
    <string name="repeat_count">Liczba powtórzeń:</string>
    <string name="weight">Ciężar(Kg) :</string>
    <string name="put_weight">Wprowadź ciężar</string>
    <string name="training_summary">Podsumowanie treningu</string>
    <string name="date">Data</string>
    <string name="planName">Nazwa planu</string>
    <string name="all_seres_has_been_ended">Wszystkie serie zostały wykonane, dobra robota !</string>
    <string name="add_serie">Dodatkowa seria</string>
    <string name="repeats_colon">Powtórzenia: </string>
    <string name="weight_colon">Ciężar: </string>
    <string name="history">Historia</string>
    <string name="live_training">Trening na żywo</string>
    <string name="training">trening</string>
    <string name="fill_series_number">Uzupełnij listę serii</string>
    <string name="add">Dodaj</string>
    <string name="empty" />
    <string name="filter">Filtruj</string>
    <string name="filter_name">Po nazwie</string>
    <string name="friends">Znajomi</string>
    <string name="add_friend">Dodaj znajomego</string>
    <string name="search_friends">Szukaj znajomych</string>
    <string name="friendship_requests_to_accept">Zaproszenia do zaakceptowania</string>
    <string name="your_friends">Twoi znajomi</string>
    <string name="to_add">Do dodana</string>
    <string name="accept">Akceptuj</string>
    <string name="requests_send">Zaproszenia wysłane</string>
    <string name="options">Opcje</string>
    <string name="my_friends">Moi znajomi</string>
    <string name="requests">Zaproszenia</string>
    <string name="put_full_nick">Wprowadź nick</string>
    <string name="message">Wiadomość</string>
    <string name="no_friend_invitations">Nikt nie zaprasza cię do znajomych :(</string>
    <string name="chat">Czat</string>
    <string name="send_message">Napisz wiadomość</string>
    <string name="Zdjęcie">photo</string>
    <string name="photo">Zdjęcie</string>
    <string name="write_post_message">Napisz treść postu</string>
    <string name="photo_not_required">Zdjęcie (nie wymagane)</string>
    <string name="create_post">Tworzenie postu</string>
    <string name="like">Polub</string>
    <string name="comment">Skomentuj</string>
    <string name="field_cannot_be_empty">Pole nie może być puste</string>
    <string name="your_weight_is_too_low">Twoja waga jest za mała</string>
    <string name="your_weight_is_to_high">Twoja waga jest za duża !</string>
    <string name="Society">Społeczność</string>
    <string name="recover_your_password">Przypomnij swoje hasło !</string>
    <string name="no_posts">Nie masz jeszcze żadnych postów!</string>
    <string name="delete_exercise">Usuń to ćwiczenie!</string>


</resources>
