<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/instant_exercises_activity_toolbar"
            style="@style/MyToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/filter" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_exercise_filter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_name"
        android:textColor="@android:color/black"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_exercise_filter_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exercise_filter_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_exercise_filter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_exercise" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_exercise_filter_muscule_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_name"
        android:textColor="@android:color/black"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout4" />


</android.support.constraint.ConstraintLayout>