<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreatePostActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/create_post_toolbar"
            style="@style/MyToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/create_post" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/post_acivity_tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/message"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_activity_til_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_acivity_tv_message">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/post_activity_tiet_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_post_message"
                    android:nestedScrollingEnabled="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/post_activity_tv_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/photo_not_required"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_activity_til_message" />

            <ImageView
                android:id="@+id/post_activity_image"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="false"
                android:cropToPadding="true"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_activity_tv_add_photo" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
